--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel -p 8080 ./src/index.html"
+    "start": "parcel -p 8080 ./src/index.html",
+    "build": "parcel build ./src/index.html --public-url ./  && cp _redirects dist/_redirects"
   },
   "keywords": [],
   "author": "Daniel Cunha",
